--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,91 @@
-// Specific CSS for your home-page
+// // Specific CSS for your home-page
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.home-container {
+  position:fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url("home-bg.jpeg");
+  background-size: cover;
+  background-position: center;
+}
+.search-form {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  width: 100vw;
+}
+.input-form {
+  padding-left: 30px;
+  width: 50vw;
+  margin: 50px;
+  height: 60px;
+  border-radius: 30px;
+  border: none;
+  opacity: 75%;
+
+  &:focus {
+    outline: none;
+
+    &:hover {
+      opacity: 100%;
+
+    }
+  }
+}
+
+.submit-btn {
+  height: 60px;
+  width: 15vw;
+  border-radius: 30px;
+  border: none;
+  opacity: 75%;
+
+  &:hover {
+    opacity: 100%;
+  }
+}
+
+.heading {
+  position: absolute;
+  transform: translateX(-50%);
+  left: 50%;
+  font-size: 5em;
+  top: 14rem;
+}
+
+.log-in-btn,
+.sign-in-btn {
+  text-decoration: none;
+  color: white;
+}
+
+.list-btn {
+  position: absolute;
+  transform: translateX(-50%);
+  left: 50%;
+  top: 34rem;
+  width: 15vw;
+  height: 60px;
+  border-radius: 30px;
+  border: none;
+  opacity: 75%;
+
+  &:hover {
+    opacity: 100%;
+  }
+}
+// .listing-link {
+//   text-decoration: none;
+//   color: black;
+
+//   &:hover {
+//     text-decoration: none;
+//     color: black;
+//   }
+// }
