added name to sign up form

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,13 @@
 // Import page-specific CSS files here.
 @import "home";
+h1 {
+  color: $dark-gray;
+}
+
+p {
+  color: $dark-gray;
+}
+
+a {
+  color: $dark-gray;
+}
