--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -2,7 +2,7 @@
 
   <div class="field">
     <%= form.label :donations_amount %>
-    <%= form.text_field :donations_amount %>
+    <%= form.number_field :donations_amount %>
   </div>
 
   <div class="field">
