--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #000;
 }
 .home-container {
   position:fixed;
@@ -10,9 +11,12 @@ body {
   width: 100%;
   height: 100vh;
   background-image: url("home-bg.jpeg");
+  opacity: 100%;
   background-size: cover;
   background-position: center;
 }
+
+
 .search-form {
   position: absolute;
   transform: translate(-50%, -50%);
