solved refresh bug

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -42,8 +42,10 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script>
-  function getMonthName(month) {
-    const monthNames = [
+  setTimeout(() => {
+
+    function getMonthName(month) {
+      const monthNames = [
       "January",
       "February",
       "March",
@@ -84,4 +86,5 @@
     },
     options: {}
   });
+}, 777);
 </script>
