--- a/app/views/charities/index.html.erb
+++ b/app/views/charities/index.html.erb
@@ -22,7 +22,7 @@
             <h5 class="card-title"><%= charity.name %></h5>
             <p class="card-text"><%= charity.total_donations %> total donations</p>
             <p class="card-text"><%= charity.cause.name %></p>
-            <%= link_to "go to charity", charity_path(charity), class: "btn btn-success" %>
+            <%= link_to "Go to charity", charity_path(charity), class: "btn btn-success" %>
           </div>
         </div>
       </div>
