--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -1,6 +1,9 @@
 <!-- app/views/charities/show.html.erb -->
 <div class="d-flex align-items-center justify-content-center">
-  <div class="card mx-auto w-75 shadow-lg">
+<div class="container ">
+  <div class="row">
+  <div class="col-md-12 col-lg-8">
+  <div class="card   shadow-lg">
     <div class="card-body">
       <h1><%= @charity.name %></h1>
 
@@ -23,30 +26,90 @@
         </tr>
       </table>
 
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th>User</th>
-            <th>Amount</th>
-            <th>Start Date</th>
-            <th>End Date</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @charity.donations.each do |donation| %>
-            <tr>
-              <td><%= donation.user.name %></td>
-              <td><i><%= donation.donations_amount %>$</i></td>
-              <td><%= donation.started %></td>
-              <td><%= donation.ended %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <div class="text-center">
+      <div>
+  <canvas id="myChart"></canvas>
+</div>
+  </div>
+  </div>
+  </div>
+  <div class="col-md-12 col-lg-4">
+  <div class="card shadow-lg w-100">
+        <div class="card-body">
+          <h2 class="text-success">Top donators</h2>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Amount</th>
+              </tr>
+            </thead>
+            <tbody>
+            <%sorted_donations = @charity.donations.sort_by{|donation| donation.donations_amount} %>
+              <% sorted_donations.reverse.each do |donation| %>
+              <tr>
+                <td><%= donation.user.name %></td>
+                <td><%= donation.donations_amount %>$</td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="text-center mt-5">
         <%= link_to "Back to Charities", charities_path, class: "btn btn-success" %>
         <%= link_to "Donate", new_charity_donation_path(@charity), class: "btn btn-success" %>
       </div>
+  </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<script>
+arr = [0,0,0,0,0,0,0,0,0,0,0,0]
+<%@charity.donations.all.each do |donation|%>
+if (<%=donation.started.year%> == "2022") {
+  arr[<%=donation.started.month%>] += <%=donation.donations_amount%>
+
+}
+<%end%>
+  const ctx = document.getElementById('myChart');
+  const monthNames = [
+      "January",
+      "February",
+      "March",
+      "April",
+      "May",
+      "June",
+      "July",
+      "August",
+      "September",
+      "October",
+      "November",
+      "December",
+    ];
+
+  new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels:  monthNames,
+      datasets: [{
+        label: '# of Donations in 2022',
+        data: arr,
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+
+</script>
+
     </div>
   </div>
 </div>
