--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -66,6 +66,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script>
+  setTimeout(() => {
 arr = [0,0,0,0,0,0,0,0,0,0,0,0]
 <%@charity.donations.all.each do |donation|%>
 if (<%=donation.started.year%> == "2022") {
@@ -107,7 +108,7 @@ if (<%=donation.started.year%> == "2022") {
       }
     }
   });
-
+  }, 777);
 </script>
 
     </div>
