Modifeyd seedfile for random images for chariries.index

--- a/app/views/charities/index.html.erb
+++ b/app/views/charities/index.html.erb
@@ -17,7 +17,7 @@
     <% @charities.each do |charity| %>
       <div class="col-xl-4 col-sm-6 mb-3">
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <%= image_tag charity.image, alt: "text", class:"card-img-top", style: "height: 18rem;" %>
           <div class="card-body">
             <h5 class="card-title"><%= charity.name %></h5>
             <p class="card-text"><%= charity.total_donations %> total donations</p>
