Fixed typespeed on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,11 +3,11 @@
 		<script>
   		$(document).ready(function() {
     			var description = new Typed('#typed', {
-        		strings: ['Giving made easy.', 'Change starts here.', 'Donate for good.', 'Empower the world.', 'Join the movement.'],
+        		strings: ['Giving made easy', 'Change starts here', 'Donate for good', 'Empower the world', 'Join the movement'],
         		loop : "true",
         		cursorChar:"",
         		backDelay:"2000",
-        		typeSpeed:"9",
+        		typeSpeed:"9.8",
         		backSpeed:"7"
 
     		})
