--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -46,6 +46,7 @@
       <div class="text-center">
         <%= link_to "Edit", edit_charity_path(@charity), class: "btn btn-success" %>
         <%= link_to "Back to Charities", charities_path, class: "btn btn-success" %>
+        <%= link_to "Donate", new_charity_donation_path(@charity), class: "btn btn-success" %>
       </div>
     </div>
   </div>
