--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon <%= "navbar-lewagon-transparent" if action_name == "home" %>">
       <div class="container-fluid">
-        <%= link_to "#", class: "navbar-brand text-white" do %>
+        <%= link_to "/", class: "navbar-brand text-white" do %>
           DonateNow
         <% end %>
 
