Added profile page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           <ul class="navbar-nav me-auto">
             <% if user_signed_in? %>
               <li class="nav-item active">
-                <%= link_to "My profile", "#", class: "nav-link btn btn-outline-light mx-3 log-in-btn" %>
+                <%= link_to "My profile", profile_path, class: "nav-link btn btn-outline-light mx-3 log-in-btn" %>
               </li>
               <li class="nav-item">
                 <%= link_to "Create new charity", new_charity_path, class: "nav-link btn btn-outline-light mx-3 log-in-btn" %>
