--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,9 +1,35 @@
-<h1>Welcome back, <%= @user.name %></h1>
-<h2>Your Donations</h2>
-<ul>
-  <% @donations.each do |donation| %>
-    <li><%= donation.donations_amount%></li>
-    <li><%= donation.started %></li>
-    <li><%= donation.ended %></li>
-  <% end %>
-</ul>
+<div class="container d-flex justify-content-center">
+  <div class="card">
+    <div class="card-header">
+      <h1>Welcome back, <%= @user.name %></h1>
+    </div>
+    <div class="card-body">
+      <h2>Your Donations</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Amount</th>
+            <th>Started</th>
+            <th>Ended</th>
+            <th>Charity name</th>
+            <th>Cause</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @donations.each do |donation| %>
+            <tr>
+              <td><%= donation.donations_amount %>$</td>
+              <td><%= donation.started %></td>
+              <td><%= donation.ended %></td>
+              <td><%= donation.charity.name %></td>
+              <td><%= donation.charity.cause.name %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+<div class="text-center mt-3">
+  <%= link_to 'Charities list', charities_path, class: "btn btn-success" %>
+</div>
