when user was signing up name was nil, now fixed

--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -33,7 +33,7 @@
           </tr>
         </thead>
         <tbody>
-          <% @charity.donations.each do |donation| %>
+          <% @charity.donations.each do |donation| raise %>
             <tr>
               <td><%= donation.user.name %></td>
               <td><%= donation.donations_amount %></td>
