--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,7 @@
   justify-content: space-between;
   background: $main;
   z-index: 1;
+  background-color: $success;
 }
 
 .navbar-lewagon .navbar-collapse {
