--- a/app/views/charities/new.html.erb
+++ b/app/views/charities/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container d-flex justify-content-center mt-5">
-  <div class="card w-75">
+  <div class="card w-75 shadow-lg">
     <div class="card-body">
       <%= form_with model: @charity, url: charities_path do |form| %>
         <% if @charity.errors.any? %>
