--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,10 +1,10 @@
 <div class="container d-flex justify-content-center">
-  <div class="card">
+  <div class="card shadow-lg">
     <div class="card-header">
       <h1>Welcome back, <%= @user.name %></h1>
     </div>
     <div class="card-body">
-      <h2>Your Donations</h2>
+      <h2 class="text-success">Your Donations</h2>
       <table class="table">
         <thead>
           <tr>
