--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,10 @@
           <ul class="navbar-nav me-auto">
             <% if user_signed_in? %>
               <li class="nav-item active">
-                <%= link_to "My profile", profile_path, class: "nav-link btn btn-outline-light mx-3 log-in-btn" %>
+                <%= link_to "My profile", profile_path, class: "nav-link btn btn-outline-light mx-3 my-2 log-in-btn" %>
               </li>
               <li class="nav-item">
-                <%= link_to "Create new charity", new_charity_path, class: "nav-link btn btn-outline-light mx-3 log-in-btn" %>
+                <%= link_to "Create new charity", new_charity_path, class: "nav-link btn btn-outline-light mx-3 my-2 log-in-btn" %>
               </li>
               <li class="nav-item dropdown">
                 <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
