--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,11 @@
-<h2>Sign up</h2>
+<div class="text-center">
+  <h2>Sign up</h2>
+</div>
 
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <div class="card">
+      <div class="card shadow">
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name),
           data: {turbo: false}) do |f| %>
           <%= f.error_notification %>
