--- a/app/assets/stylesheets/components/_card_index.scss
+++ b/app/assets/stylesheets/components/_card_index.scss
@@ -26,6 +26,7 @@
         width: 100%;
       height: 60%;
       border-radius: $border-radius-card $border-radius-card 0 0;
+      object-fit: cover;
     }
 
     .content {
