--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,7 +9,7 @@ body {
   top: 0;
   width: 100%;
   height: 100vh;
-  background-image: url("home-bg.jpeg");
+  background-image: url("home-bg.png");
   opacity: 100%;
   background-size: cover;
   background-position: center;
