--- a/app/assets/stylesheets/components/_card_index.scss
+++ b/app/assets/stylesheets/components/_card_index.scss
@@ -50,3 +50,36 @@
   }
   }
 }
+
+  /* Media queries for responsive design */
+  @media screen and (min-width: 312px) {
+    .cards {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-gap: 60px;
+    }
+  }
+
+  @media screen and (min-width: 576px) {
+    .cards {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 60px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    .cards {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 60px;
+  }
+}
+
+  @media screen and (min-width: 992px) {
+    .cards {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 60px;
+  }
+}
